# datacrawl

./: .gitignore  .pre-commit-config.yaml  .pylintrc  LICENSE  README.md  bcolors.py  crawler.py  data.json  mypy.ini  out.json  pyproject.toml  requirements.txt  script.py  setup.py  test_crawler.py
.github/workflows/: ci.yml  pylint.yml  python-publish.yml  test.yml
crawler/: crawler.py
htmlcov/: class_index.html  function_index.html  index.html  script_py.html  status.json  z_09fe4844d34b41d9_test_fetcher_py.html  z_09fe4844d34b41d9_test_formatter_py.html  z_09fe4844d34b41d9_test_robots_txt_py.html  z_09fe4844d34b41d9_test_validator_py.html  z_6d4c99d8d311740a___init___py.html  z_6d4c99d8d311740a_logging_py.html  z_a44f0ac069e85531_test_crawler_py.html  z_a44f0ac069e85531_utils_py.html  z_c1696ee00dbdb9e1_fetcher_py.html  z_c1696ee00dbdb9e1_formatter_py.html  z_c1696ee00dbdb9e1_robots_txt_py.html  z_c1696ee00dbdb9e1_validator_py.html  z_cc3fc3835d62e892_crawler_py.html  z_d2a0bc3e699ec5e2_spider_py.html  z_d2a0bc3e699ec5e2_spider_settings_py.html  z_eb59c2375d3daea4_test_logging_py.html
src/datacrawl/: __init__.py
src/datacrawl/core/: crawl_settings.py  crawler.py  datacrawl.py  spider.py  spider_settings.py
src/datacrawl/networking/: fetcher.py  formatter.py  robots_txt.py
src/tiny_web_crawler/: __init__.py  logger.py  logging.py
src/tiny_web_crawler/core/: settings.py  spider.py  spider_settings.py
src/tiny_web_crawler/networking/: fetcher.py  formatter.py  robots_txt.py  validator.py
tests/: conftest.py  test_crawler.py  utils.py
tests/core/: test_crawller.py  test_spider.py
tests/logging/: test_logging.py
tests/networking/: test_fetcher.py  test_formatter.py  test_robots_txt.py  test_validator.py
tiny_web_crawler/: crawler.py
